external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_const_name_match.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03006]: unexpected name in this position
  ┌─ tests/move_2024/matching/invalid_const_name_match.move:9:20
  │
3 │     const Z8: u8 = 0;
  │           -- Similarly named defintion found here
  ·
9 │             S { n: Z } => 0,
  │                    ^
  │                    │
  │                    Could not resolve the name 'Z'
  │                    Did you mean: 'Z8'
